# jasenrekisteri

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.meta.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  buffer  cabal.haskell-ci  cabal.project  jasenrekisteri.cabal  jasenrekisteri.js  jquery-ui.min.css  jquery-ui.min.js  lodash.fp.min.js  package.yaml  schema.sql  stack-lts-2.yaml  stack-lts-5.yaml  stack.yaml  tags.yaml
encrypted/: initial.json.enc
excel/: Excel.hs
server/: Main.hs
server/Jasenrekisteri/: API.hs  HtmlUtils.hs  Types.hs
server/Jasenrekisteri/Pages/: Member.hs  Members.hs  Tag.hs  Tags.hs
src/Control/Lens/: Att.hs
src/Data/ByteString/Lazy/: Extra.hs
src/Data/Csv/: Extra.hs
src/Jasenrekisteri/: AesonUtils.hs  Context.hs  Person.hs  Tag.hs  World.hs
src/SatO/: AcademicYear.hs  Clay.hs  Foundation.hs
src/SatO/Jasenrekisteri/: API.hs  Command.hs  Config.hs  Contact.hs  Ctx.hs  Data.hs  DumpMember.hs  Endpoints.hs  Hierarchy.hs  Markup.hs  Member.hs  MemberEdit.hs  Person.hs  PersonEdit.hs  SearchData.hs  SearchQuery.hs  Server.hs  Session.hs  Tag.hs  World.hs
src/SatO/Jasenrekisteri/Pages/: Admin.hs  Changelog.hs  Login.hs  Logout.hs  Member.hs  Members.hs  NewMember.hs  Search.hs  Tag.hs  Tags.hs
src/Sato/: Graph.hs
src/Servant/: GoogleAuth.hs  Xlsx.hs
static/: style.css
tests/: Tests.hs
