name:           jasenrekisteri
version:        0
synopsis:       Member registry of Satakuntalainen Osakunta
description:    Member registry of Satakuntalainen Osakunta. See README
category:       Web
homepage:       https://github.com/satakuntalainen-osakunta/jasenrekisteri#readme
bug-reports:    https://github.com/satakuntalainen-osakunta/jasenrekisteri/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==8.2.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/satakuntalainen-osakunta/jasenrekisteri

library
  hs-source-dirs:
      src/
  ghc-options: -Wall
  build-depends:
      base ==4.10.*
    , aeson ==1.2.*
    , aeson-compat
    , aeson-extra
    , ansi-wl-pprint
    , array
    , attoparsec
    , base-compat
    , bytestring
    , cassava
    , clay
    , containers
    , cookie
    , crypto-api
    , DRBG
    , exceptions
    , file-embed
    , fin
    , futurice-prelude
    , generics-sop
    , http-media
    , hashable
    , http-api-data
    , http-client
    , http-types
    , intervals
    , lens
    , lucid
    , mmorph
    , monadcryptorandom
    , mtl
    , postgresql-simple
    , postgresql-simple-url
    , reflection
    , regex-applicative
    , regex-applicative-text
    , resource-pool
    , semigroups
    , servant ==0.12.*
    , servant-cassava
    , servant-lucid
    , servant-server
    , stm
    , strict-base-types
    , swagger2
    , text
    , time
    , transformers
    , trifecta
    , unordered-containers
    , uuid
    , vector
    , vector-instances
    , wai
    , warp
    , xlsx
  exposed-modules:
      Control.Lens.Att
      Data.ByteString.Lazy.Extra
      Data.Csv.Extra
      SatO.AcademicYear
      SatO.Clay
      SatO.Foundation
      SatO.Jasenrekisteri.API
      SatO.Jasenrekisteri.Command
      SatO.Jasenrekisteri.Config
      SatO.Jasenrekisteri.Contact
      SatO.Jasenrekisteri.Ctx
      SatO.Jasenrekisteri.Endpoints
      SatO.Jasenrekisteri.Hierarchy
      SatO.Jasenrekisteri.Markup
      SatO.Jasenrekisteri.Member
      SatO.Jasenrekisteri.MemberEdit
      SatO.Jasenrekisteri.Pages.Changelog
      SatO.Jasenrekisteri.Pages.Login
      SatO.Jasenrekisteri.Pages.Member
      SatO.Jasenrekisteri.Pages.Members
      SatO.Jasenrekisteri.Pages.NewMember
      SatO.Jasenrekisteri.Pages.Search
      SatO.Jasenrekisteri.Pages.Tag
      SatO.Jasenrekisteri.Pages.Tags
      SatO.Jasenrekisteri.SearchData
      SatO.Jasenrekisteri.SearchQuery
      SatO.Jasenrekisteri.Server
      SatO.Jasenrekisteri.Session
      SatO.Jasenrekisteri.Tag
      SatO.Jasenrekisteri.World
      Servant.GoogleAuth
      Servant.Xlsx
  other-modules:
      Paths_jasenrekisteri
  default-language: Haskell2010

executable excel
  main-is: Excel.hs
  hs-source-dirs:
      excel/
  ghc-options: -Wall -threaded
  build-depends:
      base ==4.10.*
    , aeson ==1.2.*
    , aeson-compat
    , aeson-extra
    , ansi-wl-pprint
    , array
    , attoparsec
    , base-compat
    , bytestring
    , cassava
    , clay
    , containers
    , cookie
    , crypto-api
    , DRBG
    , exceptions
    , file-embed
    , futurice-prelude
    , generics-sop
    , http-media
    , hashable
    , http-api-data
    , http-client
    , http-types
    , intervals
    , lens
    , lucid
    , mmorph
    , monadcryptorandom
    , mtl
    , postgresql-simple
    , postgresql-simple-url
    , reflection
    , regex-applicative
    , regex-applicative-text
    , resource-pool
    , semigroups
    , servant
    , servant-cassava
    , servant-lucid
    , servant-server
    , stm
    , strict-base-types
    , swagger2
    , text
    , time
    , transformers
    , trifecta
    , unordered-containers
    , uuid
    , vector
    , vector-instances
    , wai
    , warp
    , xlsx
    , jasenrekisteri
  default-language: Haskell2010

executable jasenrekisteri-server
  main-is: Main.hs
  hs-source-dirs:
      server/
  ghc-options: -Wall -threaded
  build-depends:
    base,
    jasenrekisteri
  default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
      tests/
  ghc-options: -Wall
  build-depends:
      base
    , futurice-prelude
    , aeson
    , tasty
    , tasty-quickcheck
    , jasenrekisteri
  default-language: Haskell2010
